--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "devDependencies": {
     "@types/jquery": "^2.0.41",
     "@types/jqueryui": "^1.11.32",
-    "typescript": "^2.7.2",
+    "typescript": "^3.3.3",
     "tslint": "^5.3.2"
+  },
+  "dependencies": {
+    "ts-node": "^8.0.3"
   }
 }
