--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,23 @@
-{      "compilerOptions": {
-        "sourceMap": true,
-        "baseUrl": ".",
-        "noEmitOnError": true,
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "target": "es5",
-        "watch":false,
-        "typeRoots": [
-            "node_modules/@types"
-        ],
-        "lib": ["es2017",
-                "dom"]       
-    }, 
-       "exclude":  ["node_modules",
-                    "src/hello-world-ts-jquery"]  
+{
+  "compilerOptions": {
+    "sourceMap": true,
+    "baseUrl": ".",
+    "noEmitOnError": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "target": "es5",
+    "watch": false,
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "src/hello-world-ts-jquery"
+  ]
 }
