--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "@types/jquery": "^2.0.41",
     "@types/jqueryui": "^1.11.32",
-    "typescript": "^3.3.3",
-    "tslint": "^5.3.2"
+    "@types/moment": "^2.13.0",
+    "tslint": "^5.3.2",
+    "typescript": "^3.3.3"
   },
   "dependencies": {
-    "ts-node": "^8.0.3"
+    "moment": "^2.24.0",
+    "rxjs": "^6.5.2"
   }
 }
